[tool.poetry]
name = "gitops-utils"
version = "1.0.0"
description = ""
authors = ["Jon Bogaty <jon@jonbogaty.com>"]
readme = "README.md"
packages = [{include = "gitops_utils"}]

[tool.poetry.dependencies]
python = "^3.12"
case-insensitive-dictionary = "^0.2.1"
python-hcl2 = "^4.3.2"
ruamel-yaml = "^0.18.6"
orjson = "^3.9.15"
numpy = "^1.26.4"
deepmerge = "^1.1.1"
sortedcontainers = "^2.4.0"
more-itertools = "^10.2.0"
filelock = "^3.13.3"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"


[tool.black]
line-length = 88
target-version = ["py312"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"